--- a/_config.yml
+++ b/_config.yml
@@ -22,3 +22,24 @@ defaults:
     values:
       layout: "single"
       classes: "wide"
+
+logo: "./img/tool_logo.png"
+
+
+twitter:
+  username: "testsmtsolvers "
+
+footer:
+  links:
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter-square"
+      url: "https://twitter.com/mmistakes"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/mmistakes"
+    - label: "Instagram"
+      icon: "fab fa-fw fa-instagram"
+      url: "https://instagram.com/mmistakes"
+
+sidebar:
+  nav: "docs"
